Main website structure

--- a/portfolio/src/app/globals.css
+++ b/portfolio/src/app/globals.css
@@ -2,32 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
+/* Colors:
+https://colorkit.co/color-shades-generator/8f8f8f/
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
+*/
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+  background: #232526;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #111111, #101111);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #161616, #00080c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
 }
