--- a/portfolio/src/app/globals.css
+++ b/portfolio/src/app/globals.css
@@ -12,3 +12,9 @@ body {
   background: -webkit-linear-gradient(to right, #111111, #101111);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #161616, #00080c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
+
+@media screen and (max-width: 768px){
+  ::-webkit-scrollbar {
+      -webkit-appearance: none;
+  }
+}
